// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EsecuzionePreviewStatistiche /> visualizza dati 1`] = `
<Page>
  <TopBar
    backArrow={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    backNav={
      Object {
        "enabled": true,
        "url": "/back-url",
      }
    }
    closeBtn={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    lesson={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    pinned={true}
    single={true}
    title="Test di esecuzione"
    topSwitcher={
      Object {
        "items": Array [],
      }
    }
  />
  <Container>
    <StatisticheView
      apriChiudiSezioniFx={[Function]}
      esercizi={
        Object {
          "1": Object {
            "soluzioneTestuale": "",
            "stepData": Object {
              "esercizi": Array [
                Object {
                  "titolo": "titolo 1",
                },
              ],
              "id": 1,
            },
            "titolo": "titolo 1",
          },
          "2": Object {
            "soluzioneTestuale": "",
            "stepData": Object {
              "esercizi": Array [
                Object {
                  "titolo": "titolo 2",
                },
              ],
              "id": 2,
            },
            "titolo": "titolo 2",
          },
          "3": Object {
            "soluzioneTestuale": "",
            "stepData": Object {
              "esercizi": Array [
                Object {
                  "titolo": "titolo 3",
                },
              ],
              "id": 3,
            },
            "titolo": "titolo 3",
          },
        }
      }
      grafici={Array []}
      idAssegnazione={555}
      media={
        Object {
          "1": Object {
            "risposte": Array [
              Object {
                "corretta": true,
                "readable": "risposta 1",
                "studenti": Array [],
              },
            ],
          },
          "2": Object {
            "risposte": Array [
              Object {
                "corretta": false,
                "readable": "risposta 2",
                "studenti": Array [],
              },
            ],
          },
          "3": Object {
            "risposte": Array [
              Object {
                "corretta": false,
                "readable": "Saltata",
                "studenti": Array [],
              },
            ],
          },
        }
      }
      openedSections={Object {}}
      scores={Array []}
      selezionaUtenteFx={[Function]}
      stepPks={
        Array [
          1,
          2,
          3,
        ]
      }
      studentiVersione={
        Array [
          Object {
            "first_name": "Test",
            "id": 1,
            "key": 0,
            "last_name": "esecuzione",
            "voto": 3,
          },
        ]
      }
      utenteSelezionato={
        Object {
          "id": 1,
          "key": 0,
        }
      }
    />
  </Container>
</Page>
`;

exports[`<EsecuzionePreviewStatistiche /> visualizza dati when isErroriComuni === true e ho un titolo consegna su esercizi 1`] = `
<Page>
  <TopBar
    backArrow={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    backNav={
      Object {
        "enabled": true,
        "url": "/back-url",
      }
    }
    closeBtn={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    lesson={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    pinned={true}
    single={true}
    title="Errori comuni"
    topSwitcher={
      Object {
        "items": Array [],
      }
    }
  />
  <Container>
    <StatisticheView
      apriChiudiSezioniFx={[Function]}
      esercizi={
        Object {
          "1": Object {
            "soluzioneTestuale": "",
            "stepData": Object {
              "esercizi": Array [
                Object {
                  "titolo": "titolo 1",
                },
              ],
              "id": 1,
            },
            "titolo": "titolo 1",
          },
          "2": Object {
            "soluzioneTestuale": "",
            "stepData": Object {
              "esercizi": Array [
                Object {
                  "titolo": "titolo 2",
                },
              ],
              "id": 2,
            },
            "titolo": "titolo 2",
          },
          "3": Object {
            "soluzioneTestuale": "",
            "stepData": Object {
              "esercizi": Array [
                Object {
                  "titolo": "titolo 3",
                },
              ],
              "id": 3,
            },
            "titolo": "titolo 3",
          },
        }
      }
      grafici={Array []}
      idAssegnazione={555}
      media={
        Object {
          "1": Object {
            "risposte": Array [
              Object {
                "corretta": true,
                "readable": "risposta 1",
                "studenti": Array [],
              },
            ],
          },
          "2": Object {
            "risposte": Array [
              Object {
                "corretta": false,
                "readable": "risposta 2",
                "studenti": Array [],
              },
            ],
          },
          "3": Object {
            "risposte": Array [
              Object {
                "corretta": false,
                "readable": "Saltata",
                "studenti": Array [],
              },
            ],
          },
        }
      }
      openedSections={Object {}}
      scores={Array []}
      selezionaUtenteFx={[Function]}
      stepPks={
        Array [
          1,
          2,
          3,
        ]
      }
      studentiVersione={
        Array [
          Object {
            "first_name": "Errori",
            "id": 1,
            "key": 0,
            "last_name": "comuni",
            "voto": 3,
          },
        ]
      }
      utenteSelezionato={
        Object {
          "id": 1,
          "key": 0,
        }
      }
    />
  </Container>
</Page>
`;

exports[`<EsecuzionePreviewStatistiche /> visualizza dati when isErroriComuni === true e ho un titolo consegna su testi 1`] = `
<Page>
  <TopBar
    backArrow={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    backNav={
      Object {
        "enabled": true,
        "url": "/back-url",
      }
    }
    closeBtn={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    lesson={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    pinned={true}
    single={true}
    title="Errori comuni"
    topSwitcher={
      Object {
        "items": Array [],
      }
    }
  />
  <Container>
    <StatisticheView
      apriChiudiSezioniFx={[Function]}
      esercizi={
        Object {
          "1": Object {
            "soluzioneTestuale": "",
            "stepData": Object {
              "esercizi": Array [
                Object {
                  "titolo": undefined,
                },
              ],
              "id": 1,
              "testi": Array [
                Object {
                  "titolo": "titolo fallback 1",
                },
              ],
            },
            "titolo": "titolo fallback 1",
          },
          "2": Object {
            "soluzioneTestuale": "",
            "stepData": Object {
              "esercizi": Array [
                Object {
                  "titolo": undefined,
                },
              ],
              "id": 2,
              "testi": Array [
                Object {
                  "titolo": "titolo fallback 2",
                },
              ],
            },
            "titolo": "titolo fallback 2",
          },
          "3": Object {
            "soluzioneTestuale": "",
            "stepData": Object {
              "esercizi": Array [
                Object {
                  "titolo": undefined,
                },
              ],
              "id": 3,
              "testi": Array [
                Object {
                  "titolo": "titolo fallback 3",
                },
              ],
            },
            "titolo": "titolo fallback 3",
          },
        }
      }
      grafici={Array []}
      idAssegnazione={555}
      media={
        Object {
          "1": Object {
            "risposte": Array [
              Object {
                "corretta": true,
                "readable": "risposta 1",
                "studenti": Array [],
              },
            ],
          },
          "2": Object {
            "risposte": Array [
              Object {
                "corretta": false,
                "readable": "risposta 2",
                "studenti": Array [],
              },
            ],
          },
          "3": Object {
            "risposte": Array [
              Object {
                "corretta": false,
                "readable": "Saltata",
                "studenti": Array [],
              },
            ],
          },
        }
      }
      openedSections={Object {}}
      scores={Array []}
      selezionaUtenteFx={[Function]}
      stepPks={
        Array [
          1,
          2,
          3,
        ]
      }
      studentiVersione={
        Array [
          Object {
            "first_name": "Errori",
            "id": 1,
            "key": 0,
            "last_name": "comuni",
            "voto": 3,
          },
        ]
      }
      utenteSelezionato={
        Object {
          "id": 1,
          "key": 0,
        }
      }
    />
  </Container>
</Page>
`;
